# mesh-segmentation-caf

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindLIBIGL.cmake
src/conc_aware/: conc_aware.cpp
src/include/: basic_mesh_functions.cpp  basic_mesh_functions.h  create_laplacian.cpp  create_laplacian.h  custom_isoline.cpp  custom_isoline.h  get_separate_lines.cpp  get_separate_lines.h  merge.cpp  merge.hpp  mesh_utils.cpp  mesh_utils.hpp  sdf.cpp  sdf.hpp  split_mesh.cpp  split_mesh.h
